Bug 914517 - Call nsITransfer.init to create the attachment entry in the download manager, r=rkent

--HG--
extra : rebase_source : 4fb05480eae555442091cc201a60fbed836244ba